@startuml OpenUpMan_DB

left to right direction
skinparam linetype ortho

!define PRIMARY_KEY(x) <b><color:red>x</color></b>
!define FOREIGN_KEY(x) <color:blue>x</color>

' ==== ENTIDADES ====

entity "users" as users {
    PRIMARY_KEY(id) : TEXT
    --
    username            : TEXT
    password_hash       : TEXT
    created_at          : TEXT
    password_changed_at : TEXT
}

entity "projects" as projects {
    PRIMARY_KEY(id) : TEXT
    --
    identifier  : TEXT
    name        : TEXT
    description : TEXT
    start_date  : TEXT
    FOREIGN_KEY(owner_id) : TEXT
    state       : TEXT       ' CREATED, ACTIVE, ARCHIVED, CLOSED
    created_at  : TEXT
    updated_at  : TEXT
}

entity "project_users" as project_users {
    PRIMARY_KEY(project_id)
    PRIMARY_KEY(user_id)
    --
    FOREIGN_KEY(project_id) : TEXT
    FOREIGN_KEY(user_id)    : TEXT
    permissions             : TEXT   ' VIEWER, EDITOR, OWNER
    role                    : TEXT   ' AUTOR, REVISOR, PO, SM, DESARROLLADOR, TESTER, ADMIN
}

entity "project_phases" as project_phases {
    PRIMARY_KEY(id) : TEXT
    --
    FOREIGN_KEY(project_id) : TEXT
    code        : TEXT       ' INCEPTION, ELABORATION, CONSTRUCTION, TRANSITION
    name        : TEXT
    order       : INTEGER
    state       : TEXT       ' NOT_STARTED, IN_PROGRESS, COMPLETED
}

entity "phase_items" as phase_items {
    PRIMARY_KEY(id) : TEXT
    --
    FOREIGN_KEY(project_phase_id)    : TEXT
    type                : TEXT    ' ITERATION, MICROINCREMENT
    number              : INTEGER ' num. iteración o num. microincremento
    FOREIGN_KEY(parent_iteration_id) : TEXT
    name                : TEXT
    description         : TEXT
    start_date          : TEXT
    end_date            : TEXT
    state               : TEXT    ' PLANNED, ACTIVE, DONE, CANCELLED
    FOREIGN_KEY(created_by) : TEXT
    created_at          : TEXT
}

entity "phase_item_users" as phase_item_users {
    PRIMARY_KEY(phase_item_id)
    PRIMARY_KEY(user_id)
    --
    FOREIGN_KEY(phase_item_id) : TEXT
    FOREIGN_KEY(user_id)       : TEXT
    role                       : TEXT   ' PARTICIPANT, RESPONSIBLE, etc.
}

entity "documents" as documents {
    PRIMARY_KEY(id) : TEXT
    --
    FOREIGN_KEY(phase_item_id) : TEXT   ' FK -> phase_items.id (iteración o microincremento)
    title               : TEXT
    description         : TEXT
    FOREIGN_KEY(created_by) : TEXT
    created_at          : TEXT
    last_version_number : INTEGER
}

entity "document_versions" as document_versions {
    PRIMARY_KEY(id) : TEXT
    --
    FOREIGN_KEY(document_id)  : TEXT
    version_number            : INTEGER
    created_at                : TEXT
    FOREIGN_KEY(created_by)   : TEXT
    file_path                 : TEXT
    observations              : TEXT
}

' ==== RELACIONES ====

' users - projects (owner)
users ||--o{ projects : owner

' projects - project_users - users
projects ||--o{ project_users : proyectos
users    ||--o{ project_users : usuarios

' projects - project_phases
projects ||--o{ project_phases : fases

' project_phases - phase_items
project_phases ||--o{ phase_items : items

' phase_items - self (parent_iteration)
phase_items ||--o{ phase_items : parent_iteration

' phase_items - phase_item_users - users
phase_items ||--o{ phase_item_users : asignaciones
users       ||--o{ phase_item_users : usuarios

' users - phase_items (created_by)
users ||--o{ phase_items : creador

' phase_items - documents
phase_items ||--o{ documents : documentos

' users - documents (created_by)
users ||--o{ documents : creador

' documents - document_versions
documents ||--o{ document_versions : versiones

' users - document_versions (created_by)
users ||--o{ document_versions : creador

@enduml
